--- a/20190310顺序表/20190310顺序表/20190310顺序表.vcxproj
+++ b/20190310顺序表/20190310顺序表/20190310顺序表.vcxproj
@@ -116,6 +116,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="miao.cpp" />
+    <ClCompile Include="错掉的cpp.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
