--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,6 @@
 2019037链表/.vs/2019037链表/v15/.suo
 20190317链表/.vs/20190317链表/v15/.suo
 20190317链表/.vs/2019037链表/v15/.suo
+实验1：线性表的应用/.vs/实验1：线性表的应用/v16/.suo
+20190317链表/.vs/20190317链表/v16/.suo
+20190310顺序表/.vs/20190310顺序表/v16/.suo
