--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,7 @@
 实验1：线性表的应用/.vs/实验1：线性表的应用/v16/.suo
 20190317链表/.vs/20190317链表/v16/.suo
 20190310顺序表/.vs/20190310顺序表/v16/.suo
+20190304文件操作/.vs/20190304文件操作/v16/.suo
+实验2：栈、队列的应用.zip
+实验2：栈、队列的应用/.vs/实验2：栈、队列的应用/v16/.suo
+*.docx
